src/human_study/program_9/python_err_msg.txt
File "./seq2parse/human_study/program_9/original.py", line 6
    print s
    ^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
